--- a/YoutubeViewers.WPF/Components/YoutubeViewersDetails.xaml
+++ b/YoutubeViewers.WPF/Components/YoutubeViewersDetails.xaml
@@ -8,11 +8,12 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Border 
-            BorderBrush="Gray" 
+            BorderBrush="{StaticResource BorderPrimary}" 
+            SnapsToDevicePixels="True"
             BorderThickness="1" 
             CornerRadius="5"
             Padding="20">
-            <Grid>
+            <Grid Grid.IsSharedSizeScope="True">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -24,9 +25,11 @@
                     Text="SingletonSean" 
                     FontSize="24"/>
 
-                <Grid Grid.Row="1" Margin="0 20 0 0">
+                <Grid 
+                    Grid.Row="1" 
+                    Margin="0 20 0 0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto" SharedSizeGroup="Label"/>
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
 
@@ -34,12 +37,12 @@
                         Grid.Column="0" 
                         Text="Is Subscribed?" 
                         FontWeight="Bold"/>
-                    <TextBlock Grid.Column="1" Text="Yes"/>
+                    <TextBlock Grid.Column="1" Text="Yes" Margin="20 0 0 0"/>
                 </Grid>
 
                 <Grid Grid.Row="2" Margin="0 20 0 0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto" SharedSizeGroup="Label"/>
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
 
@@ -47,7 +50,7 @@
                         Grid.Column="0" 
                         Text="Is Member?" 
                         FontWeight="Bold"/>
-                    <TextBlock Grid.Column="1" Text="Yes"/>
+                    <TextBlock Grid.Column="1" Text="Yes" Margin="20 0 0 0"/>
                 </Grid>
 
             </Grid>
