--- a/YoutubeViewers.WPF/Components/YoutubeViewersListing.xaml
+++ b/YoutubeViewers.WPF/Components/YoutubeViewersListing.xaml
@@ -7,7 +7,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Border BorderBrush="DarkGray" BorderThickness="1" CornerRadius="5">
+        <Border 
+            BorderBrush="{StaticResource BorderPrimary}" 
+            BorderThickness="1"
+            SnapsToDevicePixels="True"
+            CornerRadius="5">
+            <Grid>
+                <Grid.OpacityMask>
+                    <VisualBrush Visual="{Binding ElementName=border}"/>
+                </Grid.OpacityMask>
+            </Grid>
+            <Border
+                x: Name="border"
+                Background="White"
+                CornerRadius="5"/>
             <ListView BorderThickness="0"/>
         </Border>
     </Grid>
