--- a/YoutubeViewers.WPF/MainWindow.xaml
+++ b/YoutubeViewers.WPF/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YoutubeViewers.WPF" xmlns:views="clr-namespace:YoutubeViewers.WPF.Views"
         mc:Ignorable="d"
+        FontSize="14"
         Title="Youtube Viewers" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="25">
         <views:YoutubeViewersView/>
         
 
