--- a/YoutubeViewers.WPF/Views/YoutubeViewersView.xaml
+++ b/YoutubeViewers.WPF/Views/YoutubeViewersView.xaml
@@ -22,19 +22,17 @@
             <Button 
                 Grid.Column="1" 
                 Content="Add" 
-                VerticalAlignment="Center" 
-                Padding="15 5" 
                 FontSize="16"/>
         </Grid>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Margin="0 20 0 0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
 
             <components:YoutubeViewersListing Grid.Column="0"/>
-            <components:YoutubeViewersDetails Grid.Column="1" Margin="10 0 0 0"/>
+            <components:YoutubeViewersDetails Grid.Column="1" Margin="20 0 0 0"/>
             
         </Grid>
     </Grid>
