--- a/YoutubeViewers.WPF/Components/YoutubeViewersListing.xaml
+++ b/YoutubeViewers.WPF/Components/YoutubeViewersListing.xaml
@@ -16,12 +16,29 @@
                 <Grid.OpacityMask>
                     <VisualBrush Visual="{Binding ElementName=border}"/>
                 </Grid.OpacityMask>
-            </Grid>
-            <Border
-                x: Name="border"
+
+                <Border
+                x:Name="border"
                 Background="White"
                 CornerRadius="5"/>
-            <ListView BorderThickness="0"/>
+                <ListView BorderThickness="0" ItemsSource="{Binding YoutubeViewersListingItemViewModels}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock Grid.Column="0" Text="{Binding Username}" />
+                                
+                                <dropdownmenucontrol:Drop
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
